# deepfang

./: .env.example  .env_20260504_024541.example.bak  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  README_20260504_000917.md.bak  README_20260504_025755.md.bak  README_20260504_030259.md.bak  biome.json  docker-compose.yml  docker-compose_20260504_024533.yml.bak  justfile  pre-commit-config.yaml  pyproject.toml  setup.ps1  start.bat  start.ps1  start_20260504_024602.ps1.bak  stop.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
configs/: grafana-dashboard-provider.yml  loki-config.yml  prometheus.yml  promtail-config.yml
configs/dashboards/: deepfang.json
configs/moltbot/: worker.yaml
configs/sanitizer/: rules.yaml
configs/worker/: worker.yaml
configs/zeroclaw/: rules.yaml
containers/: Dockerfile.grafana  Dockerfile.sanitizer  Dockerfile.supervisor  Dockerfile.worker  deepseek_bridge.py  sanitizer.py  worker.py
dashboard/: .gitignore  eslint.config.js  index.html  package.json  package_20260504_030836.json.bak  vite.config.ts  vite.config_20260504_030841.ts.bak
dashboard/src/: App.tsx  App_20260504_030655.tsx.bak  App_20260504_031119.tsx.bak  index.css
docs/: ARCHITECTURE.md  ARCHITECTURE_20260504_001324.md.bak  ARCHITECTURE_20260504_030545.md.bak  ATTACK_VECTORS.md  INSTALL.md  OPENCLAUDE_INTEGRATION.md  ROBOFANG_INTEGRATION.md  SAFETY.md  SALVAGE_PLAN.md  SALVAGE_PLAN_20260504_025853.md.bak  WSL2_DOCKER.md
src/deepfang/: main.py  (+9 more)
tests/: test_sanitizer.py  test_supervisor.py  test_worker.py
